Estructur inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,11 @@
     </head>
     <body>
         <div id="container"> 
-            <div id="post">
+            <div id="cabecera">
+                cabecera
+            </div>
+            
+            <div id="post"> 
                 <h1>
                     Este es el titulo interesante del post
                 </h1>
