Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,9 @@
     <body>
         <div id="container"> 
             <div id="cabecera">
-                cabecera
+                Hyperblog
+                <span id="tagline">Tu blog de 
+                    confianza</span>
             </div>
             
             <div id="post"> 
@@ -16,7 +18,7 @@
                 <p>
                     Y este es el parrafo que vamos a 
                     explicar las cosas increibles que
-                    vamos a hacer 
+                    vamos a hacer con ramas
                 </p>
             </div>
         </div>
