agregado el contenido adicional del blog y mejora de letra

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,12 @@
                 <p>
                     Y este es el parrafo que vamos a 
                     explicar las cosas increibles que
-                    vamos a hacer 
+                    vamos a hacer con ramas 
+                </p>
+                <p>
+                    Los blogs son la mejor forma de compartir información y 
+                    poder interiorizar tus conocimientos
+
                 </p>
             </div>
         </div>
