--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">Tu blog de 
-                    confianza</span>
+                    maestro</span>
             </div>
             
             <div id="post"> 
@@ -24,6 +24,9 @@
                     Los blogs son la mejor forma de compartir información y 
                     poder interiorizar tus conocimientos
 
+                </p>
+                <p>
+                    suscribete y dale like
                 </p>
             </div>
         </div>
